# shbin

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  main.rs  utils.rs
