[package]
name = "shbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0"
dirs = "3.0.2"
walkdir = "2.3.3"
zip = "0.6.2"
